Fix menu overlap, add UI colorblocks for homepage to improve user experience

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,6 @@ h2 {
   color: #83c057;
   font-size: 2.4em;
   margin: 1em 0;
-  padding-top: 60px;
 }
 h3 {
   font-size: 1.2em;
@@ -83,7 +82,6 @@ nav {
 .navbar-brand {
   font-size:1.2em;
   font-weight: 600;
-  padding-left:15px;
 }
 
 .navbar-light .navbar-brand {
@@ -93,7 +91,7 @@ nav {
 li.nav-item {
   text-transform: uppercase;
   font-weight: 700;
-  padding: 15px;
+  padding: 5px;
 }
 .dropdown-item.active,
 .dropdown-item:active {
@@ -118,15 +116,18 @@ input .btn .btn-primary:hover {
   background-color: #efefef;
   padding-bottom: 70px;
 }
-.mailing-list input {
+.mailing-list-blue {
+  background-color: #D0E1F9;
+}
+.mailing-list input, .mailing-list-blue input {
   height: 48px;
   padding: 0.4em 0.8em;
 }
-.mailing-list input[type~="email"]{
+.mailing-list input[type~="email"], .mailing-list-blue input[type~="email"]{
   width: 360px;
   margin-right: 10px;
 }
-.mailing-list input[type~="submit"] {
+.mailing-list input[type~="submit"], .mailing-list-blue input[type~="submit"] {
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: .03em;
@@ -151,9 +152,6 @@ input .btn .btn-primary:hover {
   text-align: center;
   background-color: #efefef;
   padding: 30px;
-}
-#organizer p {
-  margin: 60px 0 30px;
 }
 figcaption {
   font-size: 1.2em;
@@ -272,4 +270,19 @@ img.padding-overall {
 .conference-schedule h5,
 .conference-schedule p {
   text-align: center;
+}
+
+.grey-section {
+  background-color: #efefef;
+}
+
+.super-light-blue-section {
+  background-color: #f0f6fd;
+}
+
+.light-blue-section {
+  background-color: #e7f0fc;
+}
+.no-border {
+  border: none;
 }
